Fixing responsive bug on small desktops

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -31,11 +31,11 @@ h3 {
 }
 
 #container {
-    @apply px-8 py-12 xl:px-12 xl:py-16;
+    @apply px-8 py-12 xl:px-12 xl:py-16 min-h-fit;
 }
 
 #left-sidebar {
-    @apply  xl:grid w-full xl:w-96 xl:flex-none order-2 xl:order-1;
+    @apply  xl:grid w-full xl:w-72 2xl:w-96 xl:flex-none order-2 xl:order-1;
 
     .sites {
         @apply mb-20;
@@ -51,7 +51,7 @@ h3 {
     }
 
     .featured {
-        @apply xl:self-end grid gap-4 justify-items-center text-white pb-20 xl:pb-0;
+        @apply xl:self-end grid gap-4 justify-items-center text-white pb-20 2xl:pb-0;
 
         .drop-shadow {
             @apply px-4 md:px-20 xl:px-0;
@@ -85,7 +85,7 @@ h1.logo {
 }
 
 #right-sidebar {
-    @apply xl:grid xl:flex-none w-full xl:w-96 order-last;
+    @apply xl:grid xl:flex-none w-full xl:w-72 2xl:w-96 order-last;
 
     h3 {
         @apply mb-4;
